methods.picture.MethodsPicture.scala.code
override def run() {for(i<- 1 to 3;j<-1 to 3){avance(5);faireVcarré()
                                   }{gauche();avance(5);droite()}}




def faireV(c:Color){avance();gauche();setCouleurBrosse(c);a();avance();droite();avance();a();avance();droite();avance();a();gauche(); avance;gauche()}

def faireVcarré(){faireV(Color.YELLOW);faireV(Color.RED);faireV(Color.BLUE);faireV(Color.GREEN)}


def a(){baisseBrosse();leveBrosse()}